--- a/.eslintrc
+++ b/.eslintrc
@@ -2,8 +2,7 @@
     "env": {
         "browser": false,
         "node": true,
-        "es6": true,
-        "shelljs": true
+        "es6": true
     },
     "parserOptions": {
         "ecmaVersion": "latest"
